# ropod-project-software

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Gruntfile.js  README.md  bower.json  package.json  package.xml  plugin_description.xml
catkin_workspace/src/applications/test_probability_library/: CMakeLists.txt  package.xml
catkin_workspace/src/applications/test_probability_library/launch/: rviz_wire_kinetic.launch  start.launch
catkin_workspace/src/applications/test_probability_library/src/: generate_evidence.cpp  get_world_state.cpp
catkin_workspace/src/platform/pico/pico_base_controller/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
catkin_workspace/src/platform/pico/pico_base_controller/msg/: motorCurrent.msg
catkin_workspace/src/platform/pico/pico_base_controller/scripts/: Pico_controller.ino  omnibase.py
catkin_workspace/src/platform/pico/pico_base_controller/scripts/backup/: omnibase_bk_Aug32017.py  omnibase_bk_Jul24.py  omnibase_motID.py  omnibase_testEnc.py  omnibase_velforcecmd_test_.py  omnibasefv_mah.py
catkin_workspace/src/platform/pico/pico_bringup/: CMakeLists.txt  package.xml  setup.bash
catkin_workspace/src/platform/pico/pico_bringup/launch/: start.launch
catkin_workspace/src/platform/pico/pico_bringup/launch/tools/: rviz.launch
catkin_workspace/src/platform/pico/pico_bringup/machines/: .pico.machine.swp  localhost.machine
catkin_workspace/src/platform/pico/pico_bringup/parameters/hardware/: .static_tf.launch.swp  static_tf.launch
catkin_workspace/src/platform/pico/pico_bringup/parameters/hardware/asusxtion_calibration/: depth_PS1080_PrimeSense.yaml  rgb_PS1080_PrimeSense.yaml
catkin_workspace/src/platform/pico/pico_bringup/parameters/localization/: .gmapping.yaml.swp  gmapping.yaml
catkin_workspace/src/platform/pico/pico_bringup/parameters/tools/: rviz_config.rviz
catkin_workspace/src/platform/pico/pico_bringup/src/: tf_broadcaster_simulator.cpp
catkin_workspace/src/platform/robot_common/: CMakeLists.txt  README.md  package.xml  setup.bash
catkin_workspace/src/platform/robot_common/floorplans/RoboticsLab/: floorplan.urdf
catkin_workspace/src/platform/robot_common/launch/hardware/: .asusxtion.launch.swp  asusxtion.launch  hokuyo_example.launch  hokuyo_laser.launch  sick_laser.launch
catkin_workspace/src/platform/robot_common/launch/localization/: gmapping.launch
catkin_workspace/src/platform/robot_common/launch/simulator/: gazebo_simulator.launch
catkin_workspace/src/platform/robot_common/matlabLibs/Global_Libraries/ECAT_ropod_Lib_src/: Make_EtherCAT_Slave_S_functions.m
catkin_workspace/src/platform/robot_common/matlabLibs/Global_Libraries/ECAT_ropod_Lib_src/ECAT_Simulink_Lib/: SOEM_EtherCAT_Lib.slx
catkin_workspace/src/platform/robot_common/matlabLibs/Global_Libraries/ECAT_ropod_Lib_src/ECAT_s_functions/: ECAT_Interface.mexa64  ec_EL1008_di.mexa64  ec_EL2008_do.mexa64  ec_EL3102_adc.mexa64  ec_EL4132_dac.mexa64  ec_EL6021_ser.c  ec_EL6021_ser.mexa64  ec_EL6022_ser.c  ec_ROPOD_SmartWheel.mexa64  ec_ROPOD_SmartWheel2.mexa64  ec_TU_EightWheelBot.mexa64
catkin_workspace/src/platform/robot_common/matlabLibs/Global_Libraries/ropod_parameters/: ropod_parameters.m
catkin_workspace/src/platform/robot_common/scripts/: teleop.py
catkin_workspace/src/platform/robot_common/simulator/gazebo_plugins/animatedBox/: animated_box.cc
catkin_workspace/src/platform/robot_common/simulator/gazebo_plugins/animatedCylinder/: CMakeLists.txt
catkin_workspace/src/platform/robot_common/simulator/gazebo_plugins/animatedCylinder2/: CMakeLists.txt  animated_cylinder2.cc
catkin_workspace/src/platform/robot_common/simulator/gazebo_plugins/laser/: CMakeLists.txt
catkin_workspace/src/platform/robot_common/simulator/gazebo_plugins/odometry/: CMakeLists.txt
catkin_workspace/src/platform/robot_common/simulator/gazebo_plugins/odometry/src/: Odometry_Plugin.cc
catkin_workspace/src/platform/robot_common/simulator/models/mobidik/: mobidik.sdf
catkin_workspace/src/platform/robot_common/simulator/models/ropod/: ropod.sdf
catkin_workspace/src/platform/robot_common/urdf/: Help.txt  asus_camera.urdf.xacro  asus_camera.xacro
catkin_workspace/src/platform/ropod/ropod_bringup/: CMakeLists.txt  package.xml
catkin_workspace/src/platform/ropod/ropod_bringup/launch/: start (copy).launch  start.launch
catkin_workspace/src/platform/ropod/ropod_bringup/launch/tools/: rviz.launch
catkin_workspace/src/platform/ropod/ropod_bringup/parameters/hardware/: laser_parameters.yaml  sick_laser_filter_config.yaml  static_tf.launch
catkin_workspace/src/platform/ropod/ropod_bringup/parameters/hardware/asusxtion_calibration/: depth_PS1080_PrimeSense.yaml
catkin_workspace/src/platform/ropod/ropod_bringup/parameters/tools/: rviz_config.rviz
catkin_workspace/src/platform/ropod/ropod_bringup/src/: ropod_mobidik_tf_broadcaster.cpp  ropod_mobidik_tf_broadcaster_only_ropod.cpp  ropod_mobidik_tf_broadcaster_simulator.cpp  ropod_tf_broadcaster_simulator.cpp
catkin_workspace/src/rgbd/: CMakeLists.txt  README.md
catkin_workspace/src/rgbd/include/rgbd/: Image.h
catkin_workspace/src/rgbd/src/: asusxtion_to_rgbd.cpp
catkin_workspace/src/rgbd/test/: test_client.cpp
catkin_workspace/src/rgbd/tools/: analyser.cpp
rgbd/: CMakeLists.txt  package.xml
rgbd/include/rgbd/: ClientRaw.h  shared_mem_client.h
rgbd/launch/: standard_kinect.launch
rgbd/src/: Client.cpp  ClientRaw.cpp  Image.cpp  Server.cpp  rgbd_to_ros.cpp  serialization.cpp  server.cpp  viewer.cpp
rgbd/src/ros/: conversions.cpp
rgbd/tools/: analyser.cpp
tue_config/: CMakeLists.txt  package.xml
tue_config/include/tue/config/: binary_writer.h  configuration.h  label.h  map.h  types.h  write.h
tue_config/src/: binary_writer.cpp  data.cpp  data_pointer.cpp  node.cpp  reader.cpp  reader_writer.cpp  sequence.cpp  value.cpp  writer.cpp
tue_config/test/: test-output.txt  test.cpp  test_read_and_show.cpp
tue_config/tools/: generate-config
tue_filesystem/: CMakeLists.txt  package.xml
tue_filesystem/include/tue/filesystem/: path.h
tue_filesystem/src/: crawler.cpp  path.cpp
(+1116 files in other folders)
