<?xml version="1.0"?>
<package>
  <name>ed_gui_server</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="todo@tue.nl">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ed</build_depend>
  <run_depend>ed</run_depend>

  <!-- For convex hull property -->
  <build_depend>ed_sensor_integration</build_depend>
  <run_depend>ed_sensor_integration</run_depend>

  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>

</package>
