<?xml version="1.0"?>
<package>
  <name>ed_gui_server</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="s.v.d.dries@tue.nl">Sjoerd van den Dries</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ed</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rgbd</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>ed</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rgbd</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>visualization_msgs</run_depend>

</package>
