<?xml version="1.0"?>
<package>

  <name>tue_filesystem</name>
  <version>0.0.0</version>
  <description>The tue_filesystem package</description>

  <maintainer email="S.v.d.Dries@tue.nl">Sjoerd van den Dries</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
