<package>
  <name>test_probability_library</name>
  <version>0.0.0</version>
  <description>
     test_probability_library
  </description>
  <maintainer email="jos.elfring@tno.nl">Sjoerd van den Dries, Jos Elfring</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>wire_msgs</build_depend>
  <build_depend>problib</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>wire_msgs</run_depend>
  <run_depend>problib</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
    
</package>
