<?xml version="1.0"?>
<package>
  <name>robot_common</name>
  <version>0.0.0</version>
  <description>The Robot_Common package</description>

  <maintainer email="w.houtman@tue.nl">Wouter Houtman</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hokuyo3d</build_depend>
  <build_depend>sick_tim</build_depend>
  <build_depend>geolib2</build_depend>
  <build_depend>code_profiler</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  
</package>
